feat: rerun itself and add jvm args if not added yet