@@ -1,5 +1,21 @@
 package dev.donutquine.editor;
 
+import java.awt.Desktop;
+import java.io.File;
+import java.io.IOException;
+import java.lang.management.ManagementFactory;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.prefs.Preferences;
+import javax.swing.SwingUtilities;
+import javax.swing.UIManager;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import com.formdev.flatlaf.FlatLightLaf;
 import com.formdev.flatlaf.icons.FlatTabbedPaneCloseIcon;
 import com.formdev.flatlaf.util.SystemFileChooser;
@@ -7,22 +23,23 @@ import dev.donutquine.editor.layout.dialogs.AboutDialog;
 import dev.donutquine.editor.layout.dialogs.ExceptionDialog;
 import dev.donutquine.editor.layout.windows.EditorWindow;
 import dev.donutquine.editor.settings.EditorSettings;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import javax.swing.*;
-import java.awt.*;
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.List;
-import java.util.prefs.Preferences;
 
 public class Main {
     private static final Logger LOGGER = LoggerFactory.getLogger(Main.class);
+    private static final Set<String> jvmRequiredArgs = new HashSet<>(List.of("--add-exports=java.base/java.lang=ALL-UNNAMED", "--add-exports=java.desktop/sun.awt=ALL-UNNAMED", "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED"));
 
     public static void main(String[] args) {
+        System.out.println(ProcessHandle.current().info().commandLine());
+        try {
+            Set<String> jvmArgs = new HashSet<>(ManagementFactory.getRuntimeMXBean().getInputArguments());
+            if (!jvmArgs.containsAll(jvmRequiredArgs)) {
+                restartWithRequiredJvmArgs(args);
+                return;
+            }
+        } catch (Throwable t) {
+            LOGGER.error("failed to get program arguments", t);
+        }
+
         System.setProperty("apple.laf.useScreenMenuBar", "true");
 
         FlatLightLaf.setup();
@@ -109,6 +126,51 @@ public class Main {
             }
         } catch (Throwable e) {
             LOGGER.error("Failed to register about handler", e);
+        }
+    }
+
+    private static void restartWithRequiredJvmArgs(String[] args) {
+        try {
+            List<String> command = new ArrayList<>();
+
+            String javaBin = System.getProperty("java.home")
+                    + File.separator + "bin"
+                    + File.separator + "java";
+
+            command.add(javaBin);
+
+            command.addAll(
+                ManagementFactory.getRuntimeMXBean().getInputArguments()
+            );
+
+            command.addAll(jvmRequiredArgs);
+
+            String classpath = System.getProperty("java.class.path");
+
+            String commandProperty = System.getProperty("sun.java.command");
+
+            if (commandProperty.endsWith(".jar")) {
+                command.add("-jar");
+                command.add(commandProperty.split(" ")[0]);
+
+            } else {
+                command.add("-cp");
+                command.add(classpath);
+
+                String mainClass = commandProperty.split(" ")[0];
+                command.add(mainClass);
+            }
+
+            command.addAll(Arrays.asList(args));
+
+            ProcessBuilder builder = new ProcessBuilder(command);
+
+            builder.inheritIO();
+            builder.start();
+
+            System.exit(0);
+        } catch (Exception e) {
+            LOGGER.error("Failed to restart JVM with required arguments", e);
         }
     }
 }
